Contract size optimalisation and added unReveleadBidCount to Round struct and UI

--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
             <span id="debugRoundStatus">?</span>
           </p>
           <p>
-            Oraclize Decrypt price: <span id="decryptPrice">?</span> Ether
+            Oraclize Decrypt price: <span id="decryptPrice">TODO</span> Ether
           </p>
       </div>
     </div> <!-- row -->
